Add one more crashlytics generated file to .gitignore.

--- a/android/.gitignore
+++ b/android/.gitignore
@@ -6,5 +6,8 @@
 /build
 *.iml
 .idea
+
+# crashlytics generated files
 crashlytics-build.properties
 crashlytics.properties
+com_crashlytics_export_strings.xml
