--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
         transitive = true;
     }
     compile 'com.facebook.android:facebook-android-sdk:3.21.0+'
+    compile 'com.parse.bolts:bolts-android:1.1.4'
 }
