Add yelp api and controller

--- a/web/conf/application.conf
+++ b/web/conf/application.conf
@@ -60,3 +60,8 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+# Yelp API
+yelp.consumer.key = "slIZ5BnosTd0ZoDYNbwLnw"
+yelp.consumer.secret = "Ho2p0OBGKsY9yRRO7kO4mkhqP9E"
+yelp.token.key = "CxfjOTlliXyzY-yKQ6igk0UGaKPenwUt"
+yelp.token.secret = "zarjOFmhBtmdjDsYjka4fvg2wMA"
