--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -14,7 +14,6 @@ repositories {
     maven { url 'https://maven.fabric.io/public' }
 }
 
-
 android {
     compileSdkVersion 21
     buildToolsVersion "21.1.1"
@@ -35,7 +34,10 @@ android {
 }
 
 dependencies {
+    // project libraries
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile project(':library')
+    // external dependencies
     compile 'com.android.support:appcompat-v7:21.0.2'
     compile('com.crashlytics.sdk.android:crashlytics:2.1.0@aar') {
         transitive = true;
