--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -44,4 +44,6 @@ dependencies {
     }
     compile 'com.facebook.android:facebook-android-sdk:3.21.0+'
     compile 'com.parse.bolts:bolts-android:1.1.4'
+
+    compile 'com.melnykov:floatingactionbutton:1.1.0'
 }
