--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,3 +1,6 @@
+apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+
 buildscript {
     repositories {
         maven { url 'https://maven.fabric.io/public' }
@@ -7,8 +10,6 @@ buildscript {
         classpath 'io.fabric.tools:gradle:1.+'
     }
 }
-apply plugin: 'com.android.application'
-apply plugin: 'io.fabric'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
@@ -46,4 +47,6 @@ dependencies {
     compile 'com.parse.bolts:bolts-android:1.1.4'
 
     compile 'com.melnykov:floatingactionbutton:1.1.0'
+    compile 'com.squareup.okhttp:okhttp:2.2.0'
+    compile 'com.google.code.gson:gson:2.3.1'
 }
