--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".NewEventActivity"
+                  android:parentActivityName=".MainActivity"/>
+
         <meta-data android:name="com.crashlytics.ApiKey" android:value="8fdd2a4c55a40982f4cea0c0850af6ef6953945d"/>
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
         <activity android:name="com.facebook.LoginActivity"/>
