--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -46,6 +46,9 @@ dependencies {
     compile project(':library')
     // external dependencies
     compile 'com.android.support:appcompat-v7:21.0.2'
+    compile 'com.android.support:recyclerview-v7:+'
+    compile 'com.android.support:cardview-v7:21.0.2'
+
     compile('com.crashlytics.sdk.android:crashlytics:2.1.0@aar') {
         transitive = true;
     }
