--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -34,6 +34,8 @@
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
         <activity android:name="com.facebook.LoginActivity"/>
 
+        <receiver android:name=".app.AlarmReceiver"/>
+
         <!-- Google Map SDK -->
         <meta-data android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
