--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         </activity>
         <activity android:name=".NewEventActivity"
                   android:parentActivityName=".MainActivity"/>
+        <activity android:name=".DebugPreferenceActivity" />
 
         <meta-data android:name="com.crashlytics.ApiKey" android:value="8fdd2a4c55a40982f4cea0c0850af6ef6953945d"/>
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
