--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.2'
     compile 'com.android.support:recyclerview-v7:+'
     compile 'com.android.support:cardview-v7:21.0.2'
+    compile 'com.google.android.gms:play-services-maps:6.5.87'
 
     compile('com.crashlytics.sdk.android:crashlytics:2.1.0@aar') {
         transitive = true;
