--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -67,7 +67,7 @@
             </intent-filter>
         </receiver>
         <meta-data android:name="com.parse.push.notification_icon"
-            android:resource="@drawable/ic_launcher"/>
+            android:resource="@drawable/ic_push"/>
 
         <!-- Google Map SDK -->
         <meta-data android:name="com.google.android.gms.version"
