--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -43,7 +43,9 @@
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
         <activity android:name="com.facebook.LoginActivity"/>
 
-        <receiver android:name=".app.AlarmReceiver"/>
+        <receiver android:name=".app.AlarmReceiver">
+            <action android:name="com.yksong.noomee.RECOMMEND_ACTION" />
+        </receiver>
         <service android:name="com.parse.PushService" />
         <receiver android:name="com.parse.GcmBroadcastReceiver"
             android:permission="com.google.android.c2dm.permission.SEND">
