--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -44,9 +44,19 @@
         <activity android:name="com.facebook.LoginActivity"/>
 
         <receiver android:name=".app.AlarmReceiver">
-            <action android:name="com.yksong.noomee.RECOMMEND_ACTION" />
+            <intent-filter>
+                <action android:name="com.yksong.noomee.RECOMMEND_ACTION" />
+            </intent-filter>
         </receiver>
+
+        <receiver android:name=".app.BootReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
+
         <service android:name="com.parse.PushService" />
+
         <receiver android:name="com.parse.GcmBroadcastReceiver"
             android:permission="com.google.android.c2dm.permission.SEND">
             <intent-filter>
@@ -55,6 +65,7 @@
                 <category android:name="com.yksong.noomee" />
             </intent-filter>
         </receiver>
+
         <receiver android:name=".app.PushReceiver" android:exported="false">
             <intent-filter>
                 <action android:name="com.parse.push.intent.RECEIVE" />
